--- a/1_basics.ipynb
+++ b/1_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,10 +20,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/02/14 07:47:03 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark = SparkSession.builder.appName(name='Basics').getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://0609943b7eae:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.5.4</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>Basics</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0xffff81e61970>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[_c0: string, _c1: string, _c2: string, _c3: string]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = spark.read.csv('test1.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---+----------+------+\n",
+      "|      _c0|_c1|       _c2|   _c3|\n",
+      "+---------+---+----------+------+\n",
+      "|     Name|age|Experience|Salary|\n",
+      "|    Krish| 31|        10| 30000|\n",
+      "|Sudhanshu| 30|         8| 25000|\n",
+      "|    Sunny| 29|         4| 20000|\n",
+      "|     Paul| 24|         3| 20000|\n",
+      "|   Harsha| 21|         1| 15000|\n",
+      "|  Shubham| 23|         2| 18000|\n",
+      "+---------+---+----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---+----------+------+\n",
+      "|     Name|age|Experience|Salary|\n",
+      "+---------+---+----------+------+\n",
+      "|    Krish| 31|        10| 30000|\n",
+      "|Sudhanshu| 30|         8| 25000|\n",
+      "|    Sunny| 29|         4| 20000|\n",
+      "|     Paul| 24|         3| 20000|\n",
+      "|   Harsha| 21|         1| 15000|\n",
+      "|  Shubham| 23|         2| 18000|\n",
+      "+---------+---+----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = spark.read.csv(\"test1.csv\", header=True, inferSchema=True)\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Name: string (nullable = true)\n",
+      " |-- age: integer (nullable = true)\n",
+      " |-- Experience: integer (nullable = true)\n",
+      " |-- Salary: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Name', 'age', 'Experience', 'Salary']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|Experience|\n",
+      "+----------+\n",
+      "|        10|\n",
+      "|         8|\n",
+      "|         4|\n",
+      "|         3|\n",
+      "|         1|\n",
+      "|         2|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select('Experience').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+\n",
+      "|     Name|Experience|\n",
+      "+---------+----------+\n",
+      "|    Krish|        10|\n",
+      "|Sudhanshu|         8|\n",
+      "|    Sunny|         4|\n",
+      "|     Paul|         3|\n",
+      "|   Harsha|         1|\n",
+      "|  Shubham|         2|\n",
+      "+---------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(['Name', 'Experience']).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(Name='Krish', age=31, Experience=10, Salary=30000),\n",
+       " Row(Name='Sudhanshu', age=30, Experience=8, Salary=25000),\n",
+       " Row(Name='Sunny', age=29, Experience=4, Salary=20000),\n",
+       " Row(Name='Paul', age=24, Experience=3, Salary=20000)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(4)"
+   ]
   }
  ],
  "metadata": {
