--- a/1_basics.ipynb
+++ b/1_basics.ipynb
@@ -190,6 +190,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[summary: string, Name: string, age: string, Experience: string, Salary: string]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/14 08:12:17 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------+------------------+-----------------+------------------+\n",
+      "|summary|  Name|               age|       Experience|            Salary|\n",
+      "+-------+------+------------------+-----------------+------------------+\n",
+      "|  count|     6|                 6|                6|                 6|\n",
+      "|   mean|  NULL|26.333333333333332|4.666666666666667|21333.333333333332|\n",
+      "| stddev|  NULL| 4.179314138308661|3.559026084010437| 5354.126134736337|\n",
+      "|    min|Harsha|                21|                1|             15000|\n",
+      "|    max| Sunny|                31|               10|             30000|\n",
+      "+-------+------+------------------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -303,6 +356,51 @@
    ],
    "source": [
     "df.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['Name'].show()  # this pandas type syntax wont work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Name', 'string'), ('age', 'int'), ('Experience', 'int'), ('Salary', 'int')]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding and Deleting Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   }
  ],
